--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- /* Javascript */ -->
+  <script type="text/javascript" src="assets/js/jquery-1.11.2.min.js"></script>
+  <script type="text/javascript" src="assets/js/scrollReveal.js"></script>
+  <script type="text/javascript" src="assets/js/custom.js"></script> 
 </head>
 <body>
   <app-root></app-root>
