--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,22 @@
   <title>Juniormascarenhas</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+  <link rel="shortcut icon" href="assets/images/libsensorPy_icon.ico"type="image/x-icon"/>
   <!-- /* Javascript */ -->
   <script type="text/javascript" src="assets/js/jquery-1.11.2.min.js"></script>
   <script type="text/javascript" src="assets/js/scrollReveal.js"></script>
   <script type="text/javascript" src="assets/js/custom.js"></script> 
+  
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <!-- loading layout replaced by app after startupp -->
+    <div class="app-loading">
+      <div class="logo"></div>
+      <svg class="spinner" viewBox="25 25 50 50">
+        <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
+      </svg>
+    </div>
+  </app-root>
 </body>
 </html>
