--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,12 @@
   
 </head>
 <body>
+    <div id="fb-root"></div>
+    <!-- <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v3.2&appId=1196074283758697&autoLogAppEvents=1"></script> --> <!-- root -->
+    <!-- <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v3.2&appId=385564405557466&autoLogAppEvents=1"></script> --> <!-- linsensorpy origiinal -->
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v3.2&appId=1196074283758697&autoLogAppEvents=1"></script>
+    <!-- <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v3.2&appId=1196074283758697&autoLogAppEvents=1"></script> --> <!-- dose -->
+    <!-- <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v3.2&appId=1196074283758697&autoLogAppEvents=1"></script> --> <!-- inspiracao -->
   <app-root>
     <!-- loading layout replaced by app after startupp -->
     <div class="app-loading">
