--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,24 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137533511-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-137533511-1');
+  </script>
+  <script> 
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  
+      ga('create', 'UA-137533511-1', 'auto');  // <- add the UA-ID  
+    </script>
+
   <meta charset="utf-8">
   <title>Juniormascarenhas</title>
   <base href="/">
@@ -10,7 +28,7 @@
   <script type="text/javascript" src="assets/js/jquery-1.11.2.min.js"></script>
   <script type="text/javascript" src="assets/js/scrollReveal.js"></script>
   <script type="text/javascript" src="assets/js/custom.js"></script> 
-  
+  <meta property="fb:app_id" content="1196074283758697" />
 </head>
 <body>
     <div id="fb-root"></div>
@@ -28,5 +46,6 @@
       </svg>
     </div>
   </app-root>
+  
 </body>
 </html>
